Fixed spacing of top section

--- a/index.css
+++ b/index.css
@@ -289,7 +289,7 @@ header {
     left: -100px;
   }
   .home-pattern-2 {
-    margin-top: 156px;
+    margin-top: 150px;
   }
   .home-pattern-2-container {
     display: flex;
